Add zeropage allocation to .s files

--- a/clang/CMakeLists.txt
+++ b/clang/CMakeLists.txt
@@ -5,15 +5,19 @@ project(mega65libc VERSION 1.0.0 LANGUAGES C ASM)
 
 # all source and header files
 set(assembler src/fileio.s src/dirent.s)
+
 set(objects src/conio.c src/debug.c src/fat32.c src/hal.c src/memory.c src/mouse.c
     src/random.c src/sdcard.c src/targets.c src/tests.c src/time.c)
+
 set(headers include/conio.h include/debug.h include/hal.h include/memory.h
     include/sdcard.h include/targets.h include/tests.h include/time.h include/fileio.h include/dirent.h)
+
 set_source_files_properties(${objects} PROPERTIES LANGUAGE C)
 set_source_files_properties(${headers} PROPERTIES HEADER_FILE_ONLY ON)
 
 # mega65libc target
 add_library(mega65libc ${objects} ${headers})
+#add_library(mega65libc ${objects} ${headers} ${assembler}) // enable when 65ce02 is available
 target_include_directories(mega65libc
     PUBLIC 
     $<INSTALL_INTERFACE:include>    
@@ -45,6 +49,7 @@ install(EXPORT mega65libc-export
     )
 
 # compile example prg file
-add_executable(example example.c)
+add_executable(example src/example.c)
 target_link_libraries(example mega65libc)
 set_target_properties(example PROPERTIES OUTPUT_NAME example.prg EXCLUDE_FROM_ALL true)
+
