--- a/clang/CMakeLists.txt
+++ b/clang/CMakeLists.txt
@@ -51,7 +51,7 @@ install(EXPORT mega65libc-export
     )
 
 # compile example prg file
-#add_executable(example src/example.c)
-#target_link_libraries(example mega65libc)
-#set_target_properties(example PROPERTIES OUTPUT_NAME example.prg EXCLUDE_FROM_ALL true)
+add_executable(example src/example.c)
+target_link_libraries(example mega65libc)
+set_target_properties(example PROPERTIES OUTPUT_NAME example.prg EXCLUDE_FROM_ALL true)
 
