--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,17 +21,21 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Download llvm-mos-sdk
+      working-directory: ${{github.workspace}}
       run: wget https://github.com/llvm-mos/llvm-mos-sdk/releases/latest/download/llvm-mos-linux.tar.xz
-      
+        
     - name: Unpack llvm-mos-sdk
+      working-directory: ${{github.workspace}}
       run: tar xf llvm-mos-linux.tar.xz
       
-    - name: Go to project clang/ directory
-      run: cd clang/
-
+    - name: List working directory
+      working-directory: ${{github.workspace}}
+      run: ls -l
+      
     - name: Configure CMake
-      run: cmake -DCMAKE_PREFIX_PATH=../llvm-mos .
+      working-directory: ${{github.workspace}}/clang/
+      run: cmake -DCMAKE_PREFIX_PATH=${{github.workspace}}/llvm-mos .
 
     - name: Build
-      # Build your program with the given configuration
+      working-directory: ${{github.workspace}}/clang/
       run: make
