Add more clang compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,22 @@ target_include_directories(mega65libc
     ${CMAKE_CURRENT_SOURCE_DIR}/src
     )
 set_target_properties(mega65libc PROPERTIES PUBLIC_HEADER "${headers}")
-target_compile_options(mega65libc PRIVATE -mcpu=mos65c02 -Os -Wall -Wextra -Wshadow -Wconversion -Wno-language-extension-token -Wpedantic)
+
+# Let's set a rather loud warning level
+set(CLANG_WARNINGS
+    -Wall
+    -Wextra # reasonable and standard
+    -Wshadow # warn the user if a variable declaration shadows one from a parent context
+    -Wcast-align # warn for potential performance problem casts
+    -Wunused # warn on anything being unused
+    -Wconversion # warn on type conversions that may lose data
+    -Wsign-conversion # warn on sign conversions
+    -Wnull-dereference # warn if a null dereference is detected
+    -Wformat=2 # warn on security issues around functions that format output (ie printf)
+    -Wimplicit-fallthrough # warn on statements that fallthrough without an explicit annotation
+    -Wpedantic # warn if non-standard C/C++ is used
+)
+target_compile_options(mega65libc PRIVATE -mcpu=mos65c02 -Os ${CLANG_WARNINGS})
 
 # install target
 include(GNUInstallDirs)
