Use uint32_t over long for 28-bit addresses

--- a/Makefile_cc65
+++ b/Makefile_cc65
@@ -13,7 +13,7 @@ CC65=$(CC65_PREFIX)cc65
 CA65=$(CC65_PREFIX)ca65 --cpu 4510
 AR65=$(CC65_PREFIX)ar65
 
-CFLAGS=-O -t c64 -I include/
+CFLAGS=-O -t c64 -W +unused-param,+error,+unused-label,+no-effect,+unused-var,+no-effect -I include/
 
 LIB_OBJECTS = \
 	src/cc65/dirent.o \
