--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build using cc65
       working-directory: ${{github.workspace}}
-      run: USE_LOCAL_CC65=1 make -f Makefile_cc65
+      run: USE_LOCAL_CC65=1 make -f Makefile_cc65 all
     
     - name: Install llvm-mos-sdk
       working-directory: ${{github.workspace}}
