Add getrtc test and fix xemu target detection

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,5 +12,6 @@ function(TEST NAME)
 endfunction()
 
 TEST(test-fileio)
-TEST(test-memory)
 TEST(test-integer-size)
+TEST(test-memory)
+TEST(test-time)
