Add serial output to assert_eq
This makes assert_eq a function instead
of the macro. Also replaced "nop" to "clv"
in hypervisor trap calls.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
         "clang-tidy.buildPath": "build",
-        "editor.formatOnSave": true
+        "editor.formatOnSave": true,
+        "files.associations": {
+                "memory.h": "c",
+                "cstdlib": "c",
+                "fileio.h": "c"
+        }
 }
