Minor target update for tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ function(TEST NAME)
     set_target_properties(${NAME} PROPERTIES OUTPUT_NAME ${NAME}.prg)
     target_compile_options(${NAME} PRIVATE -Os ${CLANG_WARNINGS})
     if (XEMU)
-        add_test(NAME ${NAME} COMMAND sh -c "${XEMU} ${XEMU_ARGS} -prg ${NAME}.prg")
+        add_test(NAME ${NAME} COMMAND sh -c "${XEMU} ${XEMU_ARGS} -prg $<TARGET_FILE:${NAME}>")
     endif()
 endfunction()
 
