Add gethyppoversion function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
                 "cstdlib": "c",
                 "fileio.h": "c",
                 "stddef.h": "c"
-        }
+        },
+        "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
