Include fcio.c in llvm build
This fixes a number of warnings as well.
Some function are excluded due to missing
FILE and atoi() (PR for the SDK is on it's way)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
                 "memory.h": "c",
                 "cstdlib": "c",
                 "fileio.h": "c",
-                "stddef.h": "c"
+                "stddef.h": "c",
+                "cstddef": "c"
         },
         "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
