Update VSC settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
                 "cstdlib": "c",
                 "fileio.h": "c",
                 "stddef.h": "c",
-                "cstddef": "c"
+                "cstddef": "c",
+                "stdint.h": "c",
+                "tests.h": "c"
         }
 }
