--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ set(CLANG_WARNINGS
     -Wformat=2 # warn on security issues around functions that format output (ie printf)
     -Wimplicit-fallthrough # warn on statements that fallthrough without an explicit annotation
     -Wpedantic # warn if non-standard C/C++ is used
+    -Wno-c23-extensions
     -Wno-language-extension-token
 )
 target_compile_options(mega65libc PRIVATE -Os ${CLANG_WARNINGS})
